refactor(api): resolve static collection memory leak warnings and enforce safety rules